--- a/index.html
+++ b/index.html
@@ -64,20 +64,10 @@
 <body>
     <div class="container">
         <!-- Happy Birthday Menu -->
-        <details id="birthday-menu" class="menu" open>
-            <summary>Happy Birthday Menu</summary>
-            <div class="content">
-                <p>Happy Birhtday Vannah!!!</p>
-            </div>
-        </details>
+        <a href="/Happy Birthday/">Happy Birthday Menu</a>
 
         <!-- Secret Menu -->
-        <details id="secret-menu" class="menu">
-            <summary>Secret Menu</summary>
-            <div class="content">
-                <p>Unfortunately you must have a password to access this menu type it here! (Hint: It might be your birthday)</p>
-            </div>
-        </details>
+        <a href="/Secret Menu/Hoco Proposal/">Secret Menu</a>
     </div>
 </body>
 </html>
