--- a/Secret Menu/index.html
+++ b/Secret Menu/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container">
-  <h1>Enter the passcode to continue</h1>
+  <h1>Enter the passcode to continue (Hint: It's the numbers of your B-Day maybe)</h1>
   <input type="password" id="passcode-input" placeholder="Enter passcode">
   <button onclick="checkPasscode()">Submit</button>
 </div>
@@ -26,7 +26,7 @@
 
     if (enteredPasscode === correctPasscode) {
       // Redirect to the protected page if the passcode is correct
-      window.location.href = "protected-page.html";
+      window.location.href = "/Hoco Proposal/";
     } else {
       // Show an alert if the passcode is incorrect
       alert("Incorrect passcode. Please try again.");
