--- a/index.html
+++ b/index.html
@@ -20,40 +20,12 @@
             width: 90%;
             max-width: 600px;
         }
-        .menu {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        summary {
-            font-size: 1.5em;
-            font-weight: bold;
-            cursor: pointer;
-            padding: 10px 0;
-            user-select: none;
-            color: #333;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 10px 0 0 0;
-        }
-        li {
-            padding: 8px 0;
-            border-top: 1px solid #eee;
-        }
-        li:first-child {
-            border-top: none;
-        }
         /* Styles for the Birthday menu */
-        #birthday-menu summary {
+        .birthday-menu {
             color: #d63384; /* Pink color */
         }
         /* Styles for the Secret menu */
-        #secret-menu summary {
+        .secret-menu {
             color: #007bff; /* Blue color */
         }
         .content {
@@ -63,11 +35,14 @@
 </head>
 <body>
     <div class="container">
-        <!-- Happy Birthday Menu -->
-        <a href="/Happy Birthday/">Happy Birthday Menu</a>
-
-        <!-- Secret Menu -->
-        <a href="/Secret Menu/Hoco Proposal/">Secret Menu</a>
+        <div class="birthday-menu">
+            <!-- Happy Birthday Menu -->
+            <a href="/Happy Birthday/">Happy Birthday Menu</a>
+        </div>
+        <div class="secret-menu">
+            <!-- Secret Menu -->
+            <a href="/Secret Menu/">Secret Menu</a>
+        </div>
     </div>
 </body>
 </html>
