--- a/index.html
+++ b/index.html
@@ -1,47 +1,69 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Something Simple Perhaps</title>
+    <title>Something Special...</title>
     <style>
         body {
-            font-family: sans-serif;
-            background-color: #f4f4f4;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-color: #f8f9fa; /* Light gray background */
+            background-image: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             margin: 0;
             flex-direction: column;
+            color: #495057; /* Darker text for readability */
         }
         .container {
             width: 90%;
             max-width: 600px;
+            padding: 2rem;
+            text-align: center;
         }
-        /* Styles for the Birthday menu */
-        .birthday-menu {
-            color: #d63384; /* Pink color */
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
+            color: #343a40;
         }
-        /* Styles for the Secret menu */
-        .secret-menu {
-            color: #007bff; /* Blue color */
+        .link-buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
         }
-        .content {
-            padding-top: 10px;
+        .link-buttons a {
+            display: block; /* Make the whole box clickable */
+            text-decoration: none;
+            color: white;
+            font-size: 1.5rem;
+            font-weight: bold;
+            padding: 1.5rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .link-buttons a:hover {
+            transform: translateY(-5px) scale(1.02); /* Lift and grow effect */
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+        }
+        .birthday-link {
+            background: linear-gradient(45deg, #ff69b4, #ff8e53); /* Pink and orange gradient */
+        }
+        .secret-link {
+            background: linear-gradient(45deg, #007bff, #00c6ff); /* Blue and light blue gradient */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="birthday-menu">
+        <h1>Which path will you choose?</h1>
+        <div class="link-buttons">
             <!-- Happy Birthday Menu -->
-            <a href="/Happy Birthday/">Happy Birthday Menu</a>
-        </div>
-        <div class="secret-menu">
+            <a href="/Happy Birthday/" class="birthday-link">Happy Birthday Menu</a>
             <!-- Secret Menu -->
-            <a href="/Secret Menu/">Secret Menu</a>
+            <a href="/Secret Menu/" class="secret-link">Secret Menu</a>
         </div>
     </div>
 </body>
