--- a/Secret Menu/index.html
+++ b/Secret Menu/index.html
@@ -26,7 +26,7 @@
 
     if (enteredPasscode === correctPasscode) {
       // Redirect to the protected page if the passcode is correct
-      window.location.href = "./Hoco Proposal/";
+      window.location.href = "/Secret Menu/Hoco Proposal/";
     } else {
       // Show an alert if the passcode is incorrect
       alert("Incorrect passcode. Please try again.");
