--- a/Happy Birthday/index.html
+++ b/Happy Birthday/index.html
@@ -89,9 +89,9 @@
   
   <div class="main-content">
     <div class="sidebar">
-      <img src="https://i.imgur.com/K3ZqY4g.gif" alt="Spinning Cake" class="spinning-cake">
-      <img src="https://i.imgur.com/aC2l6iS.gif" alt="Silly Cat" class="cat-gif">
-      <img src="https://i.imgur.com/h2xW4dD.gif" alt="Silly Cat 2" class="cat-gif">
+      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd2J4aDNrdzQ0eTlvbnc2cWFtdzBhYXc2cmFvOW0zbnFpaDhuZ25ieSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/u0r2S9tQ8yvLh81H3k/giphy.gif" alt="Spinning Cake" class="spinning-cake">
+      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHloNGd2OXh3ZHRlajg2ejA2ZWc2aTBmcW9sZ250aWJ0dDF6am51dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/J39a9vW9gW3gS1oW6n/giphy.gif" alt="Cat in party hat" class="cat-gif">
+      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM2FwZW41djZ5cDF5Y21sMWRtM29tYnlldmZqcnJieXp5cTR5cGdxcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/N4j9v8e3r2wUfXbZ4J/giphy.gif" alt="Cat with flowers" class="cat-gif">
     </div>
 
     <div class="container">
@@ -106,9 +106,9 @@
     </div>
 
     <div class="sidebar">
-      <img src="https://i.imgur.com/aC2l6iS.gif" alt="Silly Cat 3" class="cat-gif">
-      <img src="https://i.imgur.com/K3ZqY4g.gif" alt="Spinning Cake 2" class="spinning-cake">
-      <img src="https://i.imgur.com/h2xW4dD.gif" alt="Silly Cat 4" class="cat-gif">
+      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd2J4aDNrdzQ0eTlvbnc2cWFtdzBhYXc2cmFvOW0zbnFpaDhuZ25ieSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/u0r2S9tQ8yvLh81H3k/giphy.gif" alt="Spinning Cake" class="spinning-cake">
+      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHloNGd2OXh3ZHRlajg2ejA2ZWc2aTBmcW9sZ250aWJ0dDF6am51dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/J39a9vW9gW3gS1oW6n/giphy.gif" alt="Cat in party hat" class="cat-gif">
+      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM2FwZW41djZ5cDF5Y21sMWRtM29tYnlldmZqcnJieXp5cTR5cGdxcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/N4j9v8e3r2wUfXbZ4J/giphy.gif" alt="Cat with flowers" class="cat-gif">
     </div>
   </div>
     
